--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_sparkline:
+  flutter_staggered_grid_view:
+  flutter_circular_chart:
+  font_awesome_flutter:
+  charts_flutter: ^0.6.0
 
 dev_dependencies:
   flutter_test:
