--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter_circular_chart:
   font_awesome_flutter:
   charts_flutter: ^0.6.0
+  http:
+
 
 dev_dependencies:
   flutter_test:
